# strings

./: README.md  stack.yaml  strings.cabal
src/Data/: Strings.hs
test/: DocTest.hs
test/Data/Strings/: Spec.hs  StringsSpec.hs
