name:                strings
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/strings#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Data.Strings
  build-depends:       base
                     , bytestring
                     , text

test-suite test
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , strings
                     , classy-prelude
                     , bytestring
                     , text
                     , hspec
                     , hspec-discover

test-suite doctest
  hs-source-dirs:      src, test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             DocTest.hs
  build-depends:       base
                     , strings
                     , filepath
                     , directory
                     , doctest
                     , doctest-discover

source-repository head
  type:     git
  location: https://github.com/githubuser/strings
